[MVP-38] feat: grpc 구현